feat: add meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CatPics</title>
+    <meta name="description" content="Explore a collection of adorable cat images. Find the perfect photo for you!">
+    <meta property="og:title" content="CatPics">
+    <meta property="og:description" content="Explore a collection of adorable cat images. Find the perfect photo for you!">
+    <meta property="og:image" content="https://media.discordapp.net/attachments/1187766275007594576/1193657240801001573/c8e.jpg?ex=65ad82ef&is=659b0def&hm=4c298c09a22cd34084769d8229d5089f4a805014bed1ae520c7126ad3d071ed8&=&format=webp&width=623&height=467">
+    <meta property="og:url" content="https://cat-pics-one.vercel.app/">
   </head>
   <body>
     <div id="app"></div>
